<resources>
    <string name="app_name">wan_android</string>
    <string name="conn_error">连接失败</string>

    <string name="conn_timeout">连接超时</string>
    <string name="net_error">网络错误</string>
    <string name="parse_error">解析异常</string>
    <string name="net_unused">当前网络不可用</string>
    <string name="unknow_error">未知错误</string>
    <string name="string_name">玩Android</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">首页</string>
    <string name="knowledge">知识体系</string>
    <string name="wechat">公众号</string>
    <string name="navigation">导航</string>
    <string name="project">项目</string>
    <string name="gong">公众号</string>
    <string name="know_title">开发环境</string>
    <string name="know_name">Android Studio相关</string>
    <string name="app_jiazai">正在加载中...</string>
    <string name="to_load">正在加载中…</string>
    <string name="play">玩Android</string>
    <string name="string_collect">收藏</string>
    <string name="string_TODO">TODO</string>
    <string name="string_night">夜间模式</string>
    <string name="string_settings">设置</string>
    <string name="string_about_me">关于我们</string>
    <string name="know_article_auther">作者</string>
    <string name="loade">正在加载中...</string>
    <string name="collect">收藏</string>
    <string name="not_data">暂无数据</string>
    <string name="search_tint">发现更多干货</string>
    <string name="action_search">搜索</string>
    <string name="about_play_android">玩Android V1.1.1\n</string>
    <string name="about_sites_title">网站内容</string>
    <string name="hot_search">热搜</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="psw">密码</string>
    <string name="reg">注册</string>
    <string name="go_login">已有账号？去登录</string>
    <string name="repsw">密码</string>
    <string name="go_reg">没有账号?去注册</string>
    <string name="string_unLogin">退出登录</string>
    <string name="about_sites_content_one">\t\t本网站每天新增20～30篇优质文章，并加
    \n入到现有的知识分类中，力求整理出一份优质而又
    \n详尽的知识体系，闲暇时间不放上来学习下
    \n知识；除此以外，并为大家提供平时开发过
    \n程中常用的工具以及常用的网址导航。\n\n
    \t\t当然这只是我们目前的功能，未来我们将
    \n提供更多更加便捷的功能···
    \n\n如果您有任何好的建议：
    \n\n\n
    \t\t\t\t关于网站的排版\n
    \t\t\t\t关于新增常用网址以及工具\n
    \t\t\t\t未来你希望增加的工具等
        \n
        \n
</string>
    <string name="about_sites_content_two">
    \t\t可以在
</string>
    <string name="about_sites_content_three">https://github.com/hongyangAndroid/wanandroid</string>
    <string name="about_sites_content_four">/xueandroid项目中以issue形式提出,我将及时跟进。
    \n\n\t\t如果您希望长期关注本站，可以加入我们的QQ\n群：591683946
</string>
    <string name="about_sites_content_five">\n源码位置\n
</string>
    <string name="about_sites_content_six">\t\t本软件开源，如果你发现任何错误，不要犹豫，
    马上点击GitHub，在上面发起issue或者提交pullrequest</string>

    <!--setting-->
    <string name="setting_clear">清理缓存</string>
    <string name="setting_normal">基本设置</string>
    <string name="setting_cache">是否显示首页置顶文章</string>
    <string name="setting_image">无图模式</string>
    <string name="setting_feedback">主题颜色</string>
    <string name="setting_other">其他设置</string>
    <string name="setting_night">自动切换夜间模式</string>
    <string name="navigation_color">导航栏颜色</string>
    <string name="setting_about">关于</string>
    <string name="setting_code">版本</string>
    <string name="setting_log">更新日志</string>
    <string name="setting_yuan">源代码</string>
    <string name="setting_shen">版本声明</string>
</resources>
