<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MeActivity">
    <LinearLayout
        android:layout_marginBottom="@dimen/dp_40"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"><ImageView
            android:id="@+id/about_image_header"
            android:layout_width="@dimen/dp_75"
            android:layout_height="@dimen/dp_75"
            android:src="@mipmap/icon_me_selected"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_60"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_play_android"
                android:textSize="@dimen/sp_22"
                android:layout_below="@id/about_image_header"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginLeft="@dimen/dp_110"
                android:id="@+id/about_tv_android"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_image_header"
                android:layout_marginTop="@dimen/dp_15"
                android:id="@+id/about_tv_versionName"
                android:textSize="@dimen/sp_20"
                android:layout_toRightOf="@id/about_tv_android"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_22"
                android:textColor="@color/black"
                android:layout_below="@id/about_tv_versionName"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_15"
                android:id="@+id/about_tv_sites_title"
                android:text="@string/about_sites_title"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/about_tv_sites_content_one"
                android:layout_below="@id/about_tv_sites_title"
                android:text="@string/about_sites_content_one"
                android:layout_marginTop="@dimen/dp_10"
                android:textSize="@dimen/sp_16"
                android:layout_marginLeft="@dimen/dp_15"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:text="@string/about_sites_content_two"
                android:id="@+id/about_tv_sites_content_two"
                android:textSize="@dimen/sp_18"
                android:layout_below="@id/about_tv_sites_content_one"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:textSize="@dimen/dp_14"
                android:id="@+id/about_tv_sites_content_three"
                android:text="@string/about_sites_content_three"
                android:layout_below="@id/about_tv_sites_content_two"
                android:layout_marginLeft="@dimen/dp_10"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_sites_content_four"
                android:layout_below="@id/about_tv_sites_content_three"
                android:textSize="@dimen/sp_18"
                android:id="@+id/about_tv_sites_content_four"
                android:layout_marginLeft="@dimen/dp_15"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_tv_sites_content_four"
                android:text="@string/about_sites_content_five"
                android:layout_marginLeft="@dimen/dp_15"
                android:textSize="@dimen/dp_24"
                android:textColor="@color/black"
                android:id="@+id/about_tv_sites_content_five"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/about_tv_sites_content_six"
                android:layout_below="@id/about_tv_sites_content_five"
                android:text="@string/about_sites_content_six"
                android:textSize="@dimen/sp_16"
                android:layout_marginLeft="@dimen/dp_15"/>
        </RelativeLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>